[package]
name = "hc138"
version = "0.1.0"
edition = "2021"
authors = ["Malte Brieske <9287988+mbrieske@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.11.1"
